--- a/src/main/resources/templates/allUsers.html
+++ b/src/main/resources/templates/allUsers.html
@@ -14,7 +14,6 @@
             box-sizing: content-box;
         }
     </style>
-    <title>aboba</title>
 
 
 </head>
@@ -130,7 +129,7 @@
                                                                     type="button">-</button>
                                                         </span>
                                                         <input class="text-center form-control" id="age" minlength="1"
-                                                               name="age" required type="number" value="0">
+                                                               name="age" required type="number" value="0" step="any">
                                                         <span class="input-group-btn">
                                                             <button class="btn btn-primary" id="incrementAge"
                                                                     type="button">+</button>
@@ -267,14 +266,12 @@
                                 </thead>
                                 <tr style="background-color: white">
                                     <td>
-                                        <form class="col-md-4 justify-content-center mx-auto"
-                                              th:action="@{/admin/users/new}"
-                                              th:method="POST">
+                                        <form class="col-md-4 justify-content-center mx-auto">
 
                                             <div class="mb-3 text-center">
                                                 <label class="form-label font-weight-bold" for="newID">ID</label>
                                                 <input class="form-control" disabled id="newID"
-                                                       th:value="${nextUserId}"
+                                                       value=""
                                                        type="text">
                                             </div>
 
@@ -307,13 +304,13 @@
                                                        required type="email">
                                             </div>
                                             <div class="mb-3 text-center">
-                                                <label><input name="roles" type="checkbox" value="1">
+                                                <label><input name="roles" id="newUserRole" type="checkbox" value="1">
                                                     Пользователь</label><br>
-                                                <label><input name="roles" type="checkbox" value="2">
+                                                <label><input name="roles" id="newAdminRole" type="checkbox" value="2">
                                                     Администратор</label>
                                             </div>
                                             <div class="mb-3 text-center mx-auto">
-                                                <button class="btn btn-success" type="submit">Add new user</button>
+                                                <button id = "submitNew" class="btn btn-success" type="submit">Add new user</button>
                                             </div>
 
                                         </form>
