--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script crossorigin="anonymous" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
@@ -9,13 +9,9 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
 
     <meta charset="UTF-8">
-    <style>
-        header {
-            box-sizing: content-box;
-        }
-    </style>
+
 </head>
-<header class="p-3 bg-dark text-white" style="position: relative;">
+<header class="p-3 bg-dark text-white" style="position: relative; box-sizing: content-box;">
     <strong>
         <span id="username"></span>
     </strong>
