--- a/src/main/resources/templates/allUsers.html
+++ b/src/main/resources/templates/allUsers.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
@@ -9,15 +8,11 @@
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
     <meta charset="UTF-8">
-    <style>
-        header {
-            box-sizing: content-box;
-        }
-    </style>
+
 
 
 </head>
-<header class="p-3 bg-dark text-white" style="position: relative;">
+<header class="p-3 bg-dark text-white" style="position: relative; box-sizing: content-box;">
     <strong>
         <span id="username2"></span>
     </strong>
